# VulkanApp

./: .gitignore  VulkanApp.sln
VulkanApp/: CMakeLists.txt  Mesh.cpp  Mesh.h  Utils.h  VulkanApp.vcxproj  VulkanApp.vcxproj.filters  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
shaders/: compile_shaders.bat  shader.frag  shader.vert
